--- a/src/RequestPrintShop/ResponPrint.form
+++ b/src/RequestPrintShop/ResponPrint.form
@@ -405,6 +405,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="orderField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="orderFieldActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="610" y="240" width="190" height="-1"/>
