--- a/src/RequestPrintShop/ChangeStatus.form
+++ b/src/RequestPrintShop/ChangeStatus.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="changeGroup">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="resizable" type="boolean" value="false"/>
@@ -46,6 +50,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="done">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="changeGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Done"/>
       </Properties>
       <Constraints>
@@ -56,7 +63,10 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="pendingResponding">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Pending Respinding"/>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="changeGroup"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Pending Responding"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -66,6 +76,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="waitForReceipt">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="changeGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Waiting for receipt"/>
       </Properties>
       <Constraints>
@@ -76,6 +89,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="pendingPayment">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="changeGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Pending Payment"/>
       </Properties>
       <Constraints>
@@ -86,6 +102,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="process">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="changeGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Process"/>
       </Properties>
       <Constraints>
